accessible/base/SelectionManager.cpp
@@ -231,7 +231,8 @@ void SelectionManager::ProcessSelectionChanged(SelData* aSelData) {
 void SelectionManager::SpellCheckRangeChanged(const nsRange& aRange) {
   // Events are fired in SelectionManager::NotifySelectionChanged. This is only
   // used to push cache updates.
-  if (StaticPrefs::accessibility_cache_enabled_AtStartup()) {
+  if (StaticPrefs::accessibility_cache_enabled_AtStartup() &&
+      IPCAccessibilityActive()) {
     dom::Document* doc = aRange.GetStartContainer()->OwnerDoc();
     MOZ_ASSERT(doc);
     TextLeafPoint::UpdateCachedSpellingError(doc, aRange);
