accessible/base/TextUpdater.cpp
@@ -8,7 +8,6 @@
 #include "LocalAccessible-inl.h"
 #include "CacheConstants.h"
 #include "DocAccessible-inl.h"
-#include "mozilla/StaticPrefs_accessibility.h"
 #include "nsAccessibilityService.h"
 #include "TextLeafAccessible.h"
 #include <algorithm>
@@ -33,10 +32,7 @@ void TextUpdater::Run(DocAccessible* aDocument, TextLeafAccessible* aTextLeaf,
   if (skipStart != minLen || oldLen != newLen) {
     TextUpdater updater(aDocument, aTextLeaf);
     updater.DoUpdate(aNewText, oldText, skipStart);
-    if (IPCAccessibilityActive() &&
-        StaticPrefs::accessibility_cache_enabled_AtStartup()) {
-      aDocument->QueueCacheUpdate(aTextLeaf, CacheDomain::Text);
-    }
+    aDocument->QueueCacheUpdate(aTextLeaf, CacheDomain::Text);
   }
 }
 
