accessible/generic/LocalAccessible.cpp
@@ -3600,7 +3600,8 @@ already_AddRefed<AccAttributes> LocalAccessible::BundleFieldsForCache(
 void LocalAccessible::MaybeQueueCacheUpdateForStyleChanges() {
   // mOldComputedStyle might be null if the initial cache hasn't been sent yet.
   // In that case, there is nothing to do here.
-  if (!StaticPrefs::accessibility_cache_enabled_AtStartup() ||
+  if (!IPCAccessibilityActive() ||
+      !StaticPrefs::accessibility_cache_enabled_AtStartup() ||
       !mOldComputedStyle) {
     return;
   }
